--- a/rhy_01/rhy_01.vcxproj
+++ b/rhy_01/rhy_01.vcxproj
@@ -144,14 +144,17 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Lane.cpp" />
-    <ClCompile Include="LaneVisualizer.cpp" />
+    <ClCompile Include="GameVisualizer.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="SoundDevice.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Lane.h" />
-    <ClInclude Include="LaneVisualizer.h" />
+    <ClInclude Include="GameVisualizer.h" />
     <ClInclude Include="SoundDevice.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="temp pattern.inl" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
