--- a/rhy_02/rhy_02.vcxproj.filters
+++ b/rhy_02/rhy_02.vcxproj.filters
@@ -8,6 +8,8 @@
     <ClCompile Include="SoundDevice.cpp">
       <Filter>__sound_device</Filter>
     </ClCompile>
+    <ClCompile Include="RhytheGame.cpp" />
+    <ClCompile Include="pch.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="__sound_device">
@@ -18,5 +20,7 @@
     <ClInclude Include="SoundDevice.h">
       <Filter>__sound_device</Filter>
     </ClInclude>
+    <ClInclude Include="RhytheGame.h" />
+    <ClInclude Include="pch.h" />
   </ItemGroup>
 </Project>
