sheet editor : 테스트 종료

--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,7 @@
 rhy_01/697873717765.mp3
 rhy_02/697873717765.mp3
 x64/
+editor/fdia.inl
+editor/handclap.wav
+editor/tick.mp3
+editor/__res/test.txt
