--- a/editor/editor.vcxproj
+++ b/editor/editor.vcxproj
@@ -233,6 +233,9 @@
   <ItemGroup>
     <Text Include="697873717765.txt" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="fdia.inl" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
