--- a/editor/editor.vcxproj.filters
+++ b/editor/editor.vcxproj.filters
@@ -76,4 +76,7 @@
   <ItemGroup>
     <Text Include="697873717765.txt" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="fdia.inl" />
+  </ItemGroup>
 </Project>
